2014-12-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_indices_of_file_buffer): Case insensitive 
	search for nodes with "index" in their names.

2014-12-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Info Format *): small rewordings.

	* doc/texinfo.texi (Macro Details): the linemac example became
	wrong at some point; just have to be vague, it seems.
	Report from Gavin.

2014-12-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Regular Nodes)
	(Info Format Cross Reference): Update format specification 
	following feedback from Patrice Dumas 2014-11-22.

2014-12-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: oops, \relax not \thisisundefined for
	\ifx\csname.

	* texindex.tex (\U): new command @U.
	(\DeclareUnicodeCharacter): define a cs for @U to use.
	(\globalllet): helper macros.

2014-12-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (show_error_node): Call 
	window_message_in_echo_area to display message so that 
	echo_area_node will be set for free_echo_area.
	* info/dir.c (dir_entry_of_infodir): Free dir node if no entry 
	found.
	* info/footnotes.c (make_footnotes_node): Supply a terminating 
	null instead of relying on there being one in the source node.

2014-12-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\sub, \sup, \mathopsup): new commands @sub and @sup.
	(\ptexsp, \ptexsup): save and restore in \tex.
	(\finishsub, \finishsup): helper macros.
	* NEWS,
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi (Inserting Subscripts and Superscripts),
	(HTML Xref Command Expansion),
	(Command Summary): document them.
	(Inserting Math): \mathopsup exception for plain TeX's \sup.
	
	* doc/txirefcard.tex: alphabetize some of the command lists,
	when other orderings aren't preferable.

2014-11-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Comments): must not be followed by -.
	Patrice, texinfo-devel 22 Nov 2014 15:18:07.
